<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp"
    android:paddingEnd="4dp"
    android:paddingStart="4dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:gravity="start"
        android:singleLine="true"
        android:text="@string/create_new_subject_label"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/image"
            android:layout_width="98dp"
            android:layout_height="98dp"
            android:layout_margin="16dp"
            android:background="@drawable/subject_icon_blue"
            android:gravity="center">

            <TextView
                android:id="@+id/letter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="36sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <EditText
                android:id="@+id/title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/title_hint"
                android:inputType="text|textCapSentences"
                android:padding="8dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/teacher_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/teacher_hint"
                android:inputType="textCapWords|textCapSentences|textNoSuggestions|textPersonName"
                android:padding="8dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/room_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/room_hint"
                android:inputType="text|textCapSentences|textNoSuggestions"
                android:padding="8dp"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/cancel_label"
            android:textColor="@color/colorAccent" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/ok_label"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>